icon size changes

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <title>Paytm</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#BFECFF">
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#BFECFF">
 <style>*{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent}</style><link rel="stylesheet" href="styles.c025c5f6c50bf915.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c025c5f6c50bf915.css"></noscript></head>
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.fb4a1611ea5a1692.js" type="module"></script><script src="polyfills.c3a698a9c8707a3c.js" type="module"></script><script src="main.42242eb0d191816c.js" type="module"></script></body>
+<script src="runtime.fb4a1611ea5a1692.js" type="module"></script><script src="polyfills.c3a698a9c8707a3c.js" type="module"></script><script src="main.e31174d50e9ee379.js" type="module"></script></body>
 </html>
